# AwesomeBump

./: .gitignore  .gitmodules  .qmake.conf  .qmake.stash  AwesomeBump.pro  CHANGELOG.md  CMakeLists.txt  CommonObjects.cpp  CommonObjects.h  LICENSE  README.md  camera.cpp  camera.h  config.ini  content.qrc  dialogheightcalculator.cpp  dialogheightcalculator.h  dialogheightcalculator.ui  formimageprop.cpp  formimageprop.h  formimageprop.ui  formsettingscontainer.cpp  formsettingscontainer.ui  formsettingsfield.cpp  formsettingsfield.h  formsettingsfield.ui  glimageeditor.cpp  glimageeditor.h  glwidget.cpp  glwidget.h  linuxBuildScript.sh  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.h.orig  mainwindow.ui  qopenglerrorcheck.h  unixBuildScript.sh
Sources/: .gitignore  AwesomeBump.pro  AwesomeBumpCLI.pro  AwesomeBumpGUI.pro  CommonObjects.cpp  CommonObjects.h  Info.plist  Sources.pro  allaboutdialog.cpp  allaboutdialog.h  allaboutdialog.ui  apppreferences.ui  camera.cpp  camera.h  config.ini  content.qrc  dialogheightcalculator.cpp  dialogheightcalculator.h  dialogheightcalculator.ui  dialoglogger.cpp  dialoglogger.h  dialoglogger.ui  dialogshortcuts.cpp  dialogshortcuts.h  dialogshortcuts.ui  dockwidget3dsettings.cpp  dockwidget3dsettings.h  dockwidget3dsettings.ui  formabimageprop.cpp  formabimageprop.h  formabimageprop.ui  formbasemapconversionlevels.cpp  formbasemapconversionlevels.h  formbasemapconversionlevels.ui  formimagebase.cpp  formimagebase.h  formimagebatch.cpp  formimagebatch.h  formimagebatch.ui  formimageprop.cpp  (+35 more)
Sources/properties/: Dialog3DGeneralSettings.cpp  Dialog3DGeneralSettings.h  Dialog3DGeneralSettings.ui  Filter3DBloom.pef  Filter3DDOF.pef  Filter3DLensFlares.pef  Filter3DToneMapping.pef  Filters3D.pef  GLSLParsedFragShader.pef  ImageProperties.pef  PropertyABColor.cpp  PropertyABColor.h  PropertyDelegateABColor.cpp  PropertyDelegateABColor.h  propertyconstructor.h  propertydelegateabfloatslider.cpp  propertydelegateabfloatslider.h
Sources/resources/: env.frag  env.geom  env.vert  filters.frag  filters.vert  filters_3d.frag  filters_3d.vert  icon.icns  icon.rc  normal.psd  plane.frag  plane.geom  plane.tcs.vert  plane.tes.vert  plane.vert  plane_330.vert  skybox.frag.glsl  skybox.vert.glsl
Sources/resources/actions/: copyToCB.ai  diffuse.psd  diffuseL.psd  grunge.psd  grungeL.psd  height.psd  heightL.psd  materialL.psd  metalic.psd  normal.psd  occlusionL.psd  open.ai  pasteFromCB.ai  recompileShader.ai  replot.ai  save.ai  saveAll.ai  saveSelected.ai  scaleXYUV.ai  settings3d.ai  showBatch.psd  showDiffuse.psd  showDiffuseL.psd  showGrunge.psd  showGrungeL.psd  showHeight.psd  showMaterials.psd  showMetallic.psd  showNormal.psd  showOcclusion.psd  showRoughness.psd  showSpecular.psd  showUVs.ai  text.ai  translateUV.ai  uvL.psd
Sources/resources/icons/: AB.psd  icon.icns
Sources/resources/logo/: splash.psd
Sources/resources/shaders/: filters.frag  filters_3d.frag  filters_3d.vert  plane.frag  plane.vert  plane_330.vert  quad.frag  quad.vert  skybox.frag.glsl
Sources/utils/: DebugMetricsMonitor.cpp  DebugMetricsMonitor.h  MersenneTwister.h  Mesh.cpp  Mesh.hpp  activelabel.cpp  activelabel.h  glslparsedshadercontainer.cpp  glslparsedshadercontainer.h  glslshaderparser.cpp  glslshaderparser.h  qglbuffers.cpp  qglbuffers.h
Sources/utils/contextinfo/: contextwidget.cpp  contextwidget.h  renderwindow.cpp  renderwindow.h
Sources/utils/qtcopydialog/: QtCopyDialog  QtFileCopier  qtcopydialog.cpp  qtcopydialog.h  qtcopydialog.pri  qtcopydialog.ui  qtfilecopier.cpp  qtfilecopier.h  qtotherdialog.ui  qtoverwritedialog.ui
Sources/utils/quazip/: quazip.pri
Sources/utils/tinyobj/: tiny_obj_loader.cc  tiny_obj_loader.h
Wiki/Tests/: config.ini
configs/: 28_asd.ini  36_Dragon.ini  37_Bricks.ini  38_Doors.ini
content/: env.frag  env.geom  env.vert  filters.frag  filters.vert  height.psd  plane.frag  plane.geom  plane.tcs.vert  plane.tes.vert  plane.vert  skybox.frag.glsl  skybox.vert.glsl
models/: Capsule.mtl  ConeUniform.mtl  CubeUniform.mtl  Cylinder.mtl  CylinderUniform.mtl  Hexagon.mtl  HexagonUniform.mtl  Licence.txt  PlaneUniform.mtl  Sphere.mtl  SphereCuboidUniform.mtl  SphereUniform.mtl  TorusKnotUniform.mtl  TorusUniform.mtl  sky_cube.mtl
utils/: Mesh.cpp  Mesh.hpp  qglbuffers.cpp  qglbuffers.h
utils/tinyobj/: tiny_obj_loader.cc
